force-app/main/default/objects/Proposal__c/fields/Add_Fees_to_Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Add_Fees_to_Loan_Balance__c</fullName>
    <label>Add Fees to Loan Balance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>