force-app/main/default/objects/Proposal__c/fields/Add_FFMIP_To_Loan__c.field-meta.xml
<CustomField>
    <fullName>Add_FFMIP_To_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add FFMIP To Loan</label>
    <type>Checkbox</type>
</CustomField>