force-app/main/default/objects/Proposal__c/fields/Adj_Price_1__c.field-meta.xml
<CustomField>
    <fullName>Adj_Price_1__c</fullName>
    <description>Formula: Price 1 + Global Price Adjuster.  Used in Rate Analysis</description>
    <formula>Price_1__c +  Global_Pricing_Adjuster__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adj Price 1</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>