force-app/main/default/objects/Proposal__c/fields/Adj_Price_2__c.field-meta.xml
<CustomField>
    <fullName>Adj_Price_2__c</fullName>
    <label>Adj Price 2</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>