force-app/main/default/objects/Proposal__c/fields/Appraised_Value__c.field-meta.xml
<CustomField>
    <fullName>Appraised_Value__c</fullName>
    <label>Appraised Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>