force-app/main/default/objects/Proposal__c/fields/APR1__c.field-meta.xml
<CustomField>
    <fullName>APR1__c</fullName>
    <label>APR1</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>