force-app/main/default/objects/Proposal__c/fields/APR2__c.field-meta.xml
<CustomField>
    <fullName>APR2__c</fullName>
    <label>APR2</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>