force-app/main/default/objects/Proposal__c/fields/APR3__c.field-meta.xml
<CustomField>
    <fullName>APR3__c</fullName>
    <label>APR3</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>