force-app/main/default/objects/Proposal__c/fields/APRScenario3__c.field-meta.xml
<CustomField>
    <fullName>APRScenario3__c</fullName>
    <label>APR</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>