force-app/main/default/objects/Proposal__c/fields/Balance_Remaining_New__c.field-meta.xml
<CustomField>
    <fullName>Balance_Remaining_New__c</fullName>
    <formula>Current_Loan_Balance_Remaining__c -  Early_Payoff_Savings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Remaining New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>