force-app/main/default/objects/Proposal__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Borrower</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>