force-app/main/default/objects/Proposal__c/fields/Borrower_Lead__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Borrower Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>