force-app/main/default/objects/Proposal__c/fields/Borrower_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Name_Text__c</fullName>
    <label>Borrower Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>