force-app/main/default/objects/Proposal__c/fields/BorrowerName__c.field-meta.xml
<CustomField>
    <fullName>BorrowerName__c</fullName>
    <formula>IF(Borrower__c != null, Borrower__r.FirstName + &apos; &apos; + Borrower__r.LastName, Borrower_Lead__r.FirstName + &apos; &apos; + Borrower_Lead__r.LastName )</formula>
    <label>Borrower Name</label>
    <type>Text</type>
</CustomField>