force-app/main/default/objects/Proposal__c/fields/Breakeven_Scenario3_Simple__c.field-meta.xml
<CustomField>
    <fullName>Breakeven_Scenario3_Simple__c</fullName>
    <formula>(( Total_Cost_3__c - Total_Cost_6__c ) / (Monthly_PI_Pmt6__c - Monthly_PI_Pmt3__c ))  /12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Breakeven Scenario3 Simple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>