force-app/main/default/objects/Proposal__c/fields/CashDeposit1__c.field-meta.xml
<CustomField>
    <fullName>CashDeposit1__c</fullName>
    <label>CashDeposit1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>