force-app/main/default/objects/Proposal__c/fields/CashDeposit2__c.field-meta.xml
<CustomField>
    <fullName>CashDeposit2__c</fullName>
    <label>CashDeposit2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>