force-app/main/default/objects/Proposal__c/fields/CashDeposit3__c.field-meta.xml
<CustomField>
    <fullName>CashDeposit3__c</fullName>
    <label>CashDeposit3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>