force-app/main/default/objects/Proposal__c/fields/Client_Link__c.field-meta.xml
<CustomField>
    <fullName>Client_Link__c</fullName>
    <formula>IF(ISNULL(Global_Pricing_Adjuster__c),HYPERLINK( &apos;http://solidify.force.com/solidify_proposal?id=&apos;+Id , &apos;Review Your Loan Information Here&apos;),HYPERLINK( &apos;http://solidify.force.com/proposalRate/solidify_proposalRate?id=&apos;+Id , &apos;Review Your Loan Information Here&apos;))</formula>
    <label>Client Link</label>
    <type>Text</type>
</CustomField>