force-app/main/default/objects/Proposal__c/fields/CLTV_Scenario_1__c.field-meta.xml
<CustomField>
    <fullName>CLTV_Scenario_1__c</fullName>
    <formula>(First_Loan_Amount_Scenario_1__c +  Second_Loan_Amount_Scenario_1__c) /  Estimated_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CLTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>