force-app/main/default/objects/Proposal__c/fields/CoBorrower_Fico__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Fico__c</fullName>
    <label>Fico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>