force-app/main/default/objects/Proposal__c/fields/CreditReportFeeS1__c.field-meta.xml
<CustomField>
    <fullName>CreditReportFeeS1__c</fullName>
    <label>Credit Report Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>