force-app/main/default/objects/Proposal__c/fields/Current_Balance_Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance_Down_Payment__c</fullName>
    <label>Current Balance/Down Payment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>