force-app/main/default/objects/Proposal__c/fields/Current_FHA__c.field-meta.xml
<CustomField>
    <fullName>Current_FHA__c</fullName>
    <label>Current FHA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>