force-app/main/default/objects/Proposal__c/fields/Current_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Interest_Rate__c</fullName>
    <label>Current Interest Rate</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>