force-app/main/default/objects/Proposal__c/fields/Current_Loan_Balance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Balance_Remaining__c</fullName>
    <label>Scheduled Balance Remaining</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>