force-app/main/default/objects/Proposal__c/fields/Current_Loan_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Monthly_Payment__c</fullName>
    <label>Current Loan Monthly Payment</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>