force-app/main/default/objects/Proposal__c/fields/Current_Loan_Number_Payments_Made__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Number_Payments_Made__c</fullName>
    <formula>MFLOOR( (Current_Loan_Last_Payment_Made__c -  Current_Loan_First_Payment__c) /30) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Loan Number Payments Made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>