force-app/main/default/objects/Proposal__c/fields/Current_Loan_Payments_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Payments_Remaining__c</fullName>
    <formula>Current_Loan_Term__c - Current_Loan_Number_Payments_Made__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Loan Payments Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>