force-app/main/default/objects/Proposal__c/fields/Current_Loan_Payments_Remaining_Text__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Payments_Remaining_Text__c</fullName>
    <label>Current Loan Payments Remaining Text</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>