force-app/main/default/objects/Proposal__c/fields/DownPaymentScenario2__c.field-meta.xml
<CustomField>
    <fullName>DownPaymentScenario2__c</fullName>
    <label>Down Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>