force-app/main/default/objects/Proposal__c/fields/Escrow_Ins_Monthly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Ins_Monthly_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Escrow Ins Monthly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>