force-app/main/default/objects/Proposal__c/fields/Escrow_Insurance_Total__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Insurance_Total__c</fullName>
    <formula>Escrow_Ins_Monthly_Rate__c * Escrow_Ins_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escrow Insurance Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>