force-app/main/default/objects/Proposal__c/fields/Escrow_Interest_Days__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Interest_Days__c</fullName>
    <label>Escrow Interest Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>