force-app/main/default/objects/Proposal__c/fields/Escrow_Interest_Total__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Interest_Total__c</fullName>
    <formula>Escrow_Interest_Daily_Rate__c * Escrow_Interest_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escrow Interest Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>