force-app/main/default/objects/Proposal__c/fields/Escrow_Taxes_Months__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Taxes_Months__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Escrow Taxes Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>