force-app/main/default/objects/Proposal__c/fields/Escrow_Taxes_Total__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Taxes_Total__c</fullName>
    <formula>Escrow_Taxes_Monthly_Rate__c * Escrow_Taxes_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escrow Taxes Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>