force-app/main/default/objects/Proposal__c/fields/EscrowFeesS2__c.field-meta.xml
<CustomField>
    <fullName>EscrowFeesS2__c</fullName>
    <label>Escrow Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>