force-app/main/default/objects/Proposal__c/fields/Est_Fees_Appraisal_Credit__c.field-meta.xml
<CustomField>
    <fullName>Est_Fees_Appraisal_Credit__c</fullName>
    <label>Est Fees Appraisal Credit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>