force-app/main/default/objects/Proposal__c/fields/Est_Fees_Title_Escrow__c.field-meta.xml
<CustomField>
    <fullName>Est_Fees_Title_Escrow__c</fullName>
    <label>Est Fees Title/Escrow/Recording</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>