force-app/main/default/objects/Proposal__c/fields/Est_First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_First_Payment_Date__c</fullName>
    <label>Est First Payment Date</label>
    <type>Date</type>
</CustomField>