force-app/main/default/objects/Proposal__c/fields/Estimate_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Value__c</fullName>
    <label>Estimate Value</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>