force-app/main/default/objects/Proposal__c/fields/Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value__c</fullName>
    <label>Est Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>