force-app/main/default/objects/Proposal__c/fields/EstimatedFundstoCloseScenario1__c.field-meta.xml
<CustomField>
    <fullName>EstimatedFundstoCloseScenario1__c</fullName>
    <formula>DownPaymentScenario1__c +(Escrow_Taxes_Months__c* EstimatedTaxesScenario1__c)+(Escrow_Ins_Months__c* EstimatedInsuranceScenario1__c )+( First_Loan_Amount_Scenario_1__c * Rate_Scenario_1__c /365*15) + TotalFeesS1__c + OtherDueAtCloseS1__c + CashDeposit1__c + SellerCredit1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Funds to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>