force-app/main/default/objects/Proposal__c/fields/EstimatedFundstoCloseScenario2__c.field-meta.xml
<CustomField>
    <fullName>EstimatedFundstoCloseScenario2__c</fullName>
    <formula>DownPaymentScenario2__c +(Escrow_Taxes_Months__c* EstimatedTaxesScenario2__c)+(Escrow_Ins_Months__c* EstimatedInsuranceScenario2__c )+( First_Loan_Amount_Scenario_2__c * Rate_Scenario_2__c /365*15) + TotalFeesS2__c + OtherDueAtCloseS2__c + CashDeposit2__c + SellerCredit2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Funds to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>