force-app/main/default/objects/Proposal__c/fields/EstimatedFundstoCloseScenario3__c.field-meta.xml
<CustomField>
    <fullName>EstimatedFundstoCloseScenario3__c</fullName>
    <formula>DownPaymentScenario3__c +(Escrow_Taxes_Months__c* EstimatedTaxesScenario3__c)+(Escrow_Ins_Months__c* EstimatedInsuranceScenario3__c )+( First_Loan_Amount_Scenario_3__c * Rate_Scenario_3__c /365*15) + TotalFeesS3__c + OtherDueAtCloseS3__c + CashDeposit3__c + SellerCredit3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Funds to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>