force-app/main/default/objects/Proposal__c/fields/EstimatedHOAScenario3__c.field-meta.xml
<CustomField>
    <fullName>EstimatedHOAScenario3__c</fullName>
    <label>Estimated HOA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>