force-app/main/default/objects/Proposal__c/fields/EstimatedInsuranceScenario2__c.field-meta.xml
<CustomField>
    <fullName>EstimatedInsuranceScenario2__c</fullName>
    <label>Estimated Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>