force-app/main/default/objects/Proposal__c/fields/EstimatedTaxesScenario3__c.field-meta.xml
<CustomField>
    <fullName>EstimatedTaxesScenario3__c</fullName>
    <label>Estimated Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>