force-app/main/default/objects/Proposal__c/fields/ExcludeRate1__c.field-meta.xml
<CustomField>
    <fullName>ExcludeRate1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Rate 1</label>
    <type>Checkbox</type>
</CustomField>