force-app/main/default/objects/Proposal__c/fields/ExcludeRate2__c.field-meta.xml
<CustomField>
    <fullName>ExcludeRate2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Rate 2</label>
    <type>Checkbox</type>
</CustomField>