force-app/main/default/objects/Proposal__c/fields/ExcludeRate3__c.field-meta.xml
<CustomField>
    <fullName>ExcludeRate3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Rate 3</label>
    <type>Checkbox</type>
</CustomField>